fixed the adbox alignment issue

--- a/styles.css
+++ b/styles.css
@@ -58,15 +58,14 @@
     margin-left: 20px;
   }
 
-  .top-container {
-    display: inline-block;
-    vertical-align: top;
+  .bodychunk {
+    
   }
 
   .white-box {
     background-color: #FFFFFF;
     display: inline-block;
-    margin-right: 20px;
+    vertical-align: top;
     margin-left: 20px;
     margin-bottom: 20px;
     width: 1045px;
@@ -86,7 +85,7 @@
   .image {
     width: 450px;
     height: auto;
-    margin-left: 15px;
+    margin-left: 10px;
     margin-right: 15px;
     padding: 15px;
     float: left;
@@ -206,6 +205,18 @@
     display: inline-block;
   }
 
+  .tile6 {
+    background-color: #FFFFFF;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 10px 20px rgba(0, 0, 0, 0.19);
+    padding: 5px;
+    width: 336px;
+    height: 280px;
+    margin-left: 30px;
+    margin-bottom: 50px;
+    margin-right: 195px;
+    display: inline-block;
+  }
+
   .headshot {
     border-radius: 50%;
     height: 100px;
@@ -221,16 +232,11 @@
     margin-right: 195px;
   }
 
-  .tile6 {
-    background-color: #FFFFFF;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 10px 20px rgba(0, 0, 0, 0.19);
-    padding: 5px;
-    width: 336px;
-    height: 280px;
-    margin-left: 30px;
-    margin-bottom: 50px;
-    margin-right: 195px;
-    display: inline-block;
+  .align1 {
+    background-color: #30B070;
+    width: 350px;
+    height: 2205px;
+    float: right;
   }
 
   .adbox1 {
@@ -241,9 +247,7 @@
     width: 336px;
     height: 280px;
     text-align: center;
-    position: absolute;
-    left: 1145px;
-    top: 575px;
+    margin-top: 30px;
   }
 
   .adbox2 {
@@ -254,9 +258,7 @@
     width: 336px;
     height: 280px;
     text-align: center;
-    position: absolute;
-    left: 1145px;
-    top: 1215px;
+    margin-top: 30px;
   }
 
   .adbox3 {
@@ -267,9 +269,7 @@
     width: 336px;
     height: 280px;
     text-align: center;
-    position: absolute;
-    left: 1145px;
-    top: 1855px;
+    margin-top: 30px;
   }
 
   .recommended1 {
@@ -281,9 +281,6 @@
     height: 280px;
     text-align: center;
     text-decoration: underline;
-    position: absolute;
-    left: 1145px;
-    top: 250px;
   }
 
   .recommended2 {
@@ -295,9 +292,7 @@
     height: 280px;
     text-align: center;
     text-decoration: underline;
-    position: absolute;
-    left: 1145px;
-    top: 895px;
+    margin-top: 30px;
   }
 
   .recommended3 {
@@ -309,9 +304,7 @@
     height: 280px;
     text-align: center;
     text-decoration: underline;
-    position: absolute;
-    left: 1145px;
-    top: 1535px;
+    margin-top: 30px;
   }
 
   .recommended4 {
@@ -323,9 +316,7 @@
     height: 280px;
     text-align: center;
     text-decoration: underline;
-    position: absolute;
-    left: 1145px;
-    top: 2175px;
+    margin-top: 30px;
   }
 
   .footer {
